Fixing problem with the alignment of distribution

--- a/src/components/Main/Distribution/Distribution.css
+++ b/src/components/Main/Distribution/Distribution.css
@@ -1,10 +1,10 @@
 .distribution__container {
   align-items: flex-end;
+  bottom: 23px;
   display: flex;
   height: 50px;
   left: 0;
   position: absolute;
-  top: 12px;
   width: 100%;
 }
 
